<resources>
    <string name="app_name">INSOPTAndroidPractice</string>
    <string name="welcomesopt">Welcome to Sopt</string>
    <string name="id">ID</string>
    <string name="input_id">아이디를 입력하세요.</string>
    <string name="password">password</string>
    <string name="input_password">비밀번호를 입력하세요.</string>
    <string name="login">login</string>
    <string name="signup">SIGNUP</string>
    <string name="mbti">MBTI</string>
    <string name="input_mbti">MBTI를 입력하세요.</string>
    <string name="acess_signup">회원가입 완료</string>
    <!--    <string name="name">이름 : 최윤정</string>-->
    <string name="home_name_is">이름 : %1$s</string>
    <string name="home_mbti_is">MBTI : %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="userList">사용자 정보</string>
    <!--    <string name="MY_MBTI">MBTI: ISFP</string>-->
</resources>